tests/ui/enum-generics.stderr
error: schema! does not support generic types.
 --> $DIR/enum-generics.rs:3:20
  |
3 |     pub enum MyEnum<T> {
  |                    ^^^
